unpackaged/objects/Case.object
<CustomObject>
  <fields>
    <fullName>SLAStatus__c</fullName>
    <description>Used to identify the milestone status, If the status is Red then this indicates that the milestone has been violated, If its Orange then the milestone is about being violated after a while and if its Green then still there is enough time for the CS agent to handle the case.</description>
    <label>SLA Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Green</fullName>
          <default>true</default>
          <label>Green</label>
        </value>
        <value>
          <fullName>Orange</fullName>
        </value>
        <value>
          <fullName>Red</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Survey</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Source_Record_Info__c</fullName>
    <description>Can be added to layout upon request, now it's used in the service cloud flow to pull the information directly from the case instead of the source record object</description>
    <formula>Source_Record__r.Combined_Fields__c</formula>
    <label>Source Record Info</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Source_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Record</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Source_Record__c.CIM_Account__c</field>
        <operation>equals</operation>
        <valueField>$Source.AccountId</valueField>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Source_Record__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Support_Case__c</fullName>
    <description>Checks if the case is created by a CRM Analyst or not, used in view lists, reports filters</description>
    <formula>IF(

((Contains(CreatedBy.Profile__c,"National")
||
Contains(CreatedBy.Profile__c,"Analyst")) ||  ISPICKVAL( Origin,"Support Email") ||   Owner:User.Id="00520000003K254") &amp;&amp; Not(ispickval( Request_Type__c ,"Deployment Request"))



,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks if the case is created by a CRM Analyst or not</inlineHelpText>
    <label>Support Case</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Support_Email__c</fullName>
    <label>Support Email</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Support_Keyword__c</fullName>
    <label>Support Keyword</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Digital_Product__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>1-1-1-1</fullName>
        </value>
        <value>
          <fullName>3D view</fullName>
        </value>
        <value>
          <fullName>Address Change</fullName>
        </value>
        <value>
          <fullName>ASA Issue</fullName>
        </value>
        <value>
          <fullName>Bad Install/Corrupt</fullName>
        </value>
        <value>
          <fullName>Beta</fullName>
        </value>
        <value>
          <fullName>Bite/Global</fullName>
        </value>
        <value>
          <fullName>Bracket Export Activation</fullName>
        </value>
        <value>
          <fullName>Bracket Library</fullName>
        </value>
        <value>
          <fullName>Broken</fullName>
        </value>
        <value>
          <fullName>Broken Tray</fullName>
        </value>
        <value>
          <fullName>CAD tools</fullName>
        </value>
        <value>
          <fullName>Canal Definition</fullName>
        </value>
        <value>
          <fullName>Cancellation Request</fullName>
        </value>
        <value>
          <fullName>Cannot Find</fullName>
        </value>
        <value>
          <fullName>Cannot Order</fullName>
        </value>
        <value>
          <fullName>Carestream/Orthotrac</fullName>
        </value>
        <value>
          <fullName>Case Approval</fullName>
        </value>
        <value>
          <fullName>Case creation</fullName>
        </value>
        <value>
          <fullName>Cavity Access</fullName>
        </value>
        <value>
          <fullName>CBCT Validation</fullName>
        </value>
        <value>
          <fullName>Cephalometry</fullName>
        </value>
        <value>
          <fullName>Certification</fullName>
        </value>
        <value>
          <fullName>Charts Submissions</fullName>
        </value>
        <value>
          <fullName>Class Dates</fullName>
        </value>
        <value>
          <fullName>Clinical Support</fullName>
        </value>
        <value>
          <fullName>Cloud9</fullName>
        </value>
        <value>
          <fullName>Complaint Investigation</fullName>
        </value>
        <value>
          <fullName>Composition Tool</fullName>
        </value>
        <value>
          <fullName>Computer Powered Off</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Teamforce_Product__c</fullName>
    <description>Add to which "Product" offered by the CRM team the request is related to</description>
    <inlineHelpText>Add to which "Product" offered by the CRM team the request is related to</inlineHelpText>
    <label>Teamforce Product</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Teamforce_Products</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>TrackWise_Comment__c</fullName>
    <label>TrackWise Comment</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>TrackWise_ID__c</fullName>
    <label>TrackWise ID (PR ID)</label>
    <length>60</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Tracking_number__c</fullName>
    <label>Tracking Number</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Return</fullName>
        </value>
        <value>
          <fullName>Exchange</fullName>
        </value>
        <value>
          <fullName>Credit</fullName>
        </value>
        <value>
          <fullName>Credit/Rebill</fullName>
        </value>
        <value>
          <fullName>Shipping Credits</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>User_Country__c</fullName>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>BEX</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Croatia</fullName>
        </value>
        <value>
          <fullName>Cyprus</fullName>
        </value>
        <value>
          <fullName>Czech Republic</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>DEX</fullName>
        </value>
        <value>
          <fullName>Distributor Markets</fullName>
        </value>
        <value>
          <fullName>Egypt</fullName>
        </value>
        <value>
          <fullName>Estonia</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Greece</fullName>
        </value>
        <value>
          <fullName>Holland</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>HQ: DE</fullName>
        </value>
        <value>
          <fullName>HQ: NL</fullName>
        </value>
        <value>
          <fullName>HQ: SE</fullName>
        </value>
        <value>
          <fullName>Hungary</fullName>
        </value>
        <value>
          <fullName>India</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
        <value>
          <fullName>Italy</fullName>
        </value>
        <value>
          <fullName>Japan</fullName>
        </value>
        <value>
          <fullName>Jordan</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>VoicemailLeft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked when the case status is waiting for customer feedback</description>
    <label>Voicemail Left/Email Sent</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>WeekDay__c</fullName>
    <description>A help field to tag the case with the Weekday, used in reports to show stats of cases per weekday.</description>
    <formula>Case(WEEKDAY( Datevalue(CreatedDate) ),7, "Saturday", 1, "Sunday", 2,"Monday", 3, "Tuesday", 4, "Wednesday", 5, "Thursday", 6,"Friday","")</formula>
    <inlineHelpText>Not to e included in the layout</inlineHelpText>
    <label>WeekDay</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>case_id_text__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>case id text</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>of_Approved_Article_Numbers__c</fullName>
    <label># of Approved Article Numbers</label>
    <summarizedField>Article__c.of_Approved_Article_Numbers__c</summarizedField>
    <summaryForeignKey>Article__c.Related_Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>of_Article_Numbers__c</fullName>
    <label># of Article Numbers</label>
    <summaryForeignKey>Article__c.Related_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>of_Salesforce_Licenses_Needed__c</fullName>
    <label># of Salesforce Licenses Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>related_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>CRM Requests</relationshipLabel>
    <relationshipName>CRM_Requests</relationshipName>
    <type>Lookup</type>
  </fields>
  <listViews>
    <fullName>ANZ_SureSmile_Support_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ANZ: SureSmile Support</label>
    <language>en_US</language>
    <queue>ANZ_SureSmile_Support</queue>
    <sharedTo>
      <group>ANZ_SureSmile_Support</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>ANZ_SureSmile_Support_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Account_Market__c</field>
      <operation>equals</operation>
      <value>AU</value>
    </filters>
    <filters>
      <field>CASES.STATUS</field>
      <operation>notEqual</operation>
      <value>Solved &amp; Closed,Cancelled &amp; Closed,Solved,Closed,Cancelled,Completed,Merged &amp; Cancelled</value>
    </filters>
    <label>ANZ: SureSmile Support Open Cases</label>
    <sharedTo>
      <group>ANZ_SureSmile_Support</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>AT_CH_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Movex__c</columns>
    <columns>Country__c</columns>
    <columns>Creator_Country__c</columns>
    <columns>MD_Legacy_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CASES.RECORDTYPE</field>
      <operation>equals</operation>
      <value>Case.Service_Complaint</value>
    </filters>
    <filters>
      <field>Account_Country__c</field>
      <operation>equals</operation>
      <value>AT,CH</value>
    </filters>
    <label>AT/CH : All Cases</label>
    <language>en_US</language>
    <sharedTo>
      <role>BEX_SIMPLANT_Business_Support</role>
      <role>BEX_Technical_Support_Admin</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>AU_SIMPLANT_Support</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Complaint_Category__c</columns>
    <columns>Complaint_Reason2__c</columns>
    <columns>Digital_Product__c</columns>
    <columns>Support_Keyword__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CASES.STATUS</field>
      <operation>notEqual</operation>
      <value>Closed</value>
    </filters>
    <filters>
      <field>Account_Market__c</field>
      <operation>equals</operation>
      <value>AU</value>
    </filters>
    <filters>
      <field>OWNER_NAME</field>
      <operation>notContain</operation>
      <value>BEX</value>
    </filters>
    <filters>
      <field>CASES.RECORDTYPE</field>
      <operation>equals</operation>
      <value>Case.Service_Complaint</value>
    </filters>
    <filters>
      <field>Product_Line__c</field>
      <operation>equals</operation>
      <value>SIMPLANT</value>
    </filters>
    <label>AU: SIMPLANT Support</label>
    <language>en_US</language>
    <sharedTo>
      <role>BEX_SIMPLANT_Business_Support</role>
      <role>BEX_Technical_Support_Admin</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>AU_Service_Complaints_excl_SIMPLANT</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Account_Country__c</field>
      <operation>equals</operation>
      <value>Australia</value>
    </filters>
    <filters>
      <field>CASES.RECORDTYPE</field>
      <operation>equals</operation>
      <value>01220000000AFN1,Case.Service_Complaint,Case.TrackWise_Complaint</value>
    </filters>
    <label>AU: Service Complaints (excl. SIMPLANT)</label>
    <language>en_US</language>
    <sharedTo>
      <role>AU_Shared_Services</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>All_SIMPLANT_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Movex__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Digital_Product__c</columns>
    <columns>Support_Keyword__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CASES.RECORDTYPE</field>
      <operation>equals</operation>
      <value>Case.Service_Complaint</value>
    </filters>
    <filters>
      <field>Digital_Product__c</field>
      <operation>notEqual</operation>
    </filters>
    <label>Software Support Cases</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>BENELUX_SureSmile_Support_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LastInboundEmailDate__c</columns>
    <filterScope>Queue</filterScope>
    <label>BENELUX: SureSmile Support</label>
    <language>en_US</language>
    <queue>BENELUX_SureSmile_Support</queue>
    <sharedTo>
      <group>BENELUX_SureSmile_Support</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BNL_All_Open_Service_Complaints</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CASES.STATUS</field>
      <operation>notEqual</operation>
      <value>Closed</value>
    </filters>
    <label>BNL: All Open Service Complaints</label>
    <sharedTo>
      <role>Benelux_Shared_Services</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BNL_Complaints_CS_All_Closed</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CASES.CLOSED</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>Support_Email__c</field>
      <operation>equals</operation>
      <value>BNL: Complaints CS</value>
    </filters>
    <label>BNL: Complaints CS (All Closed)</label>
    <sharedTo>
      <group>BNL_Complaints_CS</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BNL_Complaints_CS_All_Open</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CASES.CLOSED</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <filters>
      <field>Support_Email__c</field>
      <operation>equals</operation>
      <value>BNL: Complaints CS</value>
    </filters>
    <label>BNL: Complaints CS (All Open)</label>
    <sharedTo>
      <group>BNL_Complaints_CS</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BNL_Complaints_CS_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
      <field>CASES.CLOSED</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <label>BNL: Complaints CS (Unassigned)</label>
    <queue>BNL_Complaints_CS</queue>
    <sharedTo>
      <group>BNL_Complaints_CS</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BNL_Complaints_CS_Unassigned</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
      <field>CASES.CLOSED</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <label>BNL: PRE CS (Unassigned)</label>
    <queue>BNL_PRE_Customer_Service</queue>
    <sharedTo>
      <group>BNL_PRE_Customer_Service</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BNL_Implants_C_Service_All_Open</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>LastInboundEmailDate__c</columns>
    <columns>LastEmailType__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CASES.CLOSED</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <filters>
      <field>Support_Email__c</field>
      <operation>equals</operation>
      <value>BNL: Implants Customer Service</value>
    </filters>
    <label>BNL: Implants CS (All Open)</label>
    <sharedTo>
      <group>BNL_Implants_Customer_Service</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BNL_Implants_C_Service_Unassigned</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>LastEmailType__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
      <field>CASES.CLOSED</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <label>BNL: Implants CS (Unassigned)</label>
    <queue>BNL_Implants_Customer_Service</queue>
    <sharedTo>
      <group>BNL_Implants_Customer_Service</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BNL_Implants_Customer_Service_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>LastEmailType__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CASES.CLOSED</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>Support_Email__c</field>
      <operation>equals</operation>
      <value>BNL: Implants Customer Service</value>
    </filters>
    <label>BNL: Implants CS (All Closed)</label>
    <sharedTo>
      <group>BNL_Implants_Customer_Service</group>
    </sharedTo>
  </listViews>
  <recordTypes>
    <active>true</active>
    <businessProcess>CRM Requests</businessProcess>
    <description>Record type for creating CRM Requests to the Global CRM-Team</description>
    <fullName>CRM_Requests</fullName>
    <label>CRM Requests</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>Credit and Rebill</businessProcess>
    <description>Used by the Implants Division to track and approve the credit and Credit/Rebill process</description>
    <fullName>Credits_and_Re_bills</fullName>
    <label>Credits and Rebills</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>EquipmentComplaint</businessProcess>
    <fullName>EquipmentComplaint</fullName>
    <label>Equipment Complaint</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>Return Authorization</businessProcess>
    <description>Used by Implants Division to Authorize, Process and Approve Product Returns</description>
    <fullName>Return_Authorizations</fullName>
    <label>Return Authorizations</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>Service Complaint</businessProcess>
    <description>The global record type for service complaint</description>
    <fullName>Service_Complaint</fullName>
    <label>Service Complaint</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>TrackWise</businessProcess>
    <fullName>Siroforce</fullName>
    <label>Siroforce</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>Service Complaint</businessProcess>
    <description>Under Construction - CRM Request # 00061483</description>
    <fullName>TrackWise_Complaint</fullName>
    <label>TrackWise Complaint</label>
  </recordTypes>
  <sharingModel>Private</sharingModel>
  <validationRules>
    <fullName>Add_cancellation_notes_if_cancelling</fullName>
    <active>true</active>
    <description>For CRM Requests - mandatory to add cancellation notes if you cancel a request, decision or explanantion for why cancelled</description>
    <errorConditionFormula>IF(RecordType.Name = "CRM Requests", TRUE, FALSE) &amp;&amp; ISPICKVAL(Status , "Cancelled &amp; Closed") &amp;&amp; ISBLANK( Cancellation_reason__c )</errorConditionFormula>
    <errorMessage>You must add cancellation notes before cancelling a CRM Request</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>AddressOrSourceRecord_IsRequired</fullName>
    <active>true</active>
    <description>When the product line is SureSmile:

Address is required for ROW
Source Record is required for US, CA, AU, and NZ</description>
    <errorConditionFormula>Text(Product_Line__c)="SureSmile"

&amp;&amp; 

Text(Status) !="New"

&amp;&amp;

(
    (ISBLANK( Address__c )

&amp;&amp;

 TEXT(Account.Country__c)  !="US"

&amp;&amp;

  TEXT(Account.Country__c)  !="CA"

&amp;&amp;

  TEXT(Account.Country__c) !="AU"

&amp;&amp;

  TEXT(Account.Country__c) !="SG"

&amp;&amp;

  TEXT(Account.Country__c) !="ID"
  
&amp;&amp;

  TEXT(Account.Country__c) !="TH"

&amp;&amp;

  TEXT(Account.Country__c) !="HK"

&amp;&amp;

 TEXT(Account.Country__c) !="NZ")

||

(ISBLANK( Source_Record__c )

&amp;&amp;

 ( TEXT(Account.Country__c)  ="US"

||

  TEXT(Account.Country__c) ="CA"

||

  TEXT(Account.Country__c) ="AU"

||

  TEXT(Account.Country__c) ="SG"

||

  TEXT(Account.Country__c) ="ID"
  
||

  TEXT(Account.Country__c) ="TH"

||

  TEXT(Account.Country__c) ="HK"

||

 TEXT(Account.Country__c)="NZ"))

)</errorConditionFormula>
    <errorMessage>Address or Source record are required when Product Line = SureSmile</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Article_Number_is_required</fullName>
    <active>true</active>
    <description>Article number is required when Product line is Implants and Complaint Category is Product Related - excluded for USA and Germany</description>
    <errorConditionFormula>IsBlank(Article_Number__c) 
&amp;&amp; 
IsPickval(Product_Line__c,"Implants") 
&amp;&amp; 
Ispickval( Complaint_Category__c ,"Product Related")
&amp;&amp;
RecordTypeId="01220000000AvOO"
&amp;&amp; 
NOT( Ispickval($User.User_Country__c,"USA") )
&amp;&amp; 
NOT( Ispickval($User.User_Country__c,"Germany") )
&amp;&amp; 
NOT(Account.RecordTypeId ="0120J00000079nB")
&amp;&amp;
FlowCase__c =False</errorConditionFormula>
    <errorDisplayField>Article_Number__c</errorDisplayField>
    <errorMessage>Article Number is required for the selected Complaint Category</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Digital_Product_is_required</fullName>
    <active>false</active>
    <description>Digital Product is required when SIMPLANT/ATL Suprastructures is selected and Not a complaint</description>
    <errorConditionFormula>(Ispickval(Product_Line__c,"Simplant")
||
Ispickval(Product_Line__c,"ATL Suprastructures")
|| Ispickval(Product_Line__c,"Azento") || Ispickval(Product_Line__c,"SureSmile"))
&amp;&amp; 
Ispickval(Complaint_Category__c,"Customer Interaction") 
&amp;&amp; 
Ispickval( Digital_Product__c,"")
&amp;&amp;
RecordTypeId="01220000000AvOO"
&amp;&amp;
$User.Alias != 'support'
&amp;&amp;
FlowCase__c =False</errorConditionFormula>
    <errorDisplayField>Digital_Product__c</errorDisplayField>
    <errorMessage>Digital Product is required for the selected Complaint Category</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>NA_not_create_some_cases_for_US_inClassi</fullName>
    <active>true</active>
    <description>validation rule on Cases to prevent the US team from creating cases using Return authorization or Credit/rebill</description>
    <errorConditionFormula>$Profile.Name ='Lightning Service Cloud'

&amp;&amp;
((RecordTypeId='0120J000000R2FE' || RecordTypeId='0120J000000cmqH'))
/*Return authorization and Credit/rebill record type IDs*/
&amp;&amp;

ISNEW()</errorConditionFormula>
    <errorMessage>You cannot create Return authorization or Credit/rebill record types. Please use the Service Cloud flow</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Order_Number_is_required</fullName>
    <active>true</active>
    <description>Order number is required upon closing a case. For all Product Lines</description>
    <errorConditionFormula>IsBlank(Order_Number__c) 
&amp;&amp; 
(Ispickval(Complaint_Category__c,"Orders &amp; Billing") || Ispickval(Complaint_Category__c,"Shipping") ) 
&amp;&amp; 
Ispickval(Status,"Closed")
&amp;&amp;
ISCHANGED(Status)
&amp;&amp;
RecordTypeId="01220000000AvOO"
&amp;&amp;
NOT( Ispickval($User.User_Country__c,"USA") )
&amp;&amp;
FlowCase__c=False</errorConditionFormula>
    <errorDisplayField>Order_Number__c</errorDisplayField>
    <errorMessage>Order Number is required for the selected Complaint Category</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Read_only_Status_for_CRM_Analysts</fullName>
    <active>true</active>
    <errorConditionFormula>((RecordType.Id = "0120J000000cmlW"
&amp;&amp;
($User.ProfileId = "00e20000001Ygwh"
|| 
$User.ProfileId = "00e20000001ISEf"
||  
$User.ProfileId = "00e0J000001R3ik"
||
 Contains($User.Profile__c,"National Administrator"))
&amp;&amp;
ISCHANGED(Status))
)
||

((RecordType.Id = "0120J000000cmlW"
&amp;&amp;
($User.ProfileId = "00e20000001Ygwh"
||  
$User.ProfileId = "00e20000001ISEf"
||  
$User.ProfileId = "00e0J000001R3ik"
||
 Contains($User.Profile__c,"National Administrator"))
&amp;&amp;
ISNEW() 
&amp;&amp;
TEXT(Status) !="New"
))</errorConditionFormula>
    <errorMessage>Please add a new CRM Request with the status "New"</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>SiroForceIntegrated</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Full_Name__c &lt;&gt; 'Siroforce Integration' &amp;&amp; RecordType.DeveloperName ='EquipmentComplaint'</errorConditionFormula>
    <errorMessage>This record is integrated from Siroforce. If you need to update the record it must be done in Siroforce</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>You_Cannot_Assign_a_case_to_Support_User</fullName>
    <active>true</active>
    <description>To prevent users from accidentally assigning a case to the Support user, where they can't transfer the case to themselves again.</description>
    <errorConditionFormula>ISCHANGED( OwnerId )
&amp;&amp;
Owner:User.Id ="00520000003K254" /*User Support*/ 
&amp;&amp;
RecordType.Id ="01220000000AvOO"/*Record Type Service Complaint*/ 
&amp;&amp;
NOT(CONTAINS($Profile.Name,"System"))</errorConditionFormula>
    <errorMessage>You can't assign this case to the Support User</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>You_must_be_the_owner_to_edit_the_case</fullName>
    <active>false</active>
    <description>Germany has a requirement to allow only the owners of the case to edit it.</description>
    <errorConditionFormula>$User.Id != OwnerId 
&amp;&amp; 
RecordTypeId="01220000000AvOO"
&amp;&amp; 
TEXT($User.User_Country__c)="Germany"
&amp;&amp;
Not(Includes( $User.Service_Cloud_Special_Permissions__c,"Edit Case as Manager"))
&amp;&amp;
(
Ischanged( Complaint_Reason2__c )
||
Ischanged( Complaint_Category__c )
||
Ischanged(  CaseType__c  )
||
Ischanged( Subject )
||
Ischanged( Description )
||
Ischanged( ContactId )
||
Ischanged( AccountId )
||
Ischanged( Origin )
||
Ischanged( Order_Number__c )
||
Ischanged( Invoice_Number__c )
||
Ischanged( SBU__c )
||
Ischanged( Product_Line__c )
||
Ischanged( Article_Number__c )
||
Ischanged( Order_Origin__c )
||
Ischanged( First_call_resolution__c )
)</errorConditionFormula>
    <errorMessage>You can't edit this case because you are not the owner.</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>admins_populate_country_field</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Id = '00e20000001Ygwu' &amp;&amp;/*profile -&gt; #System Admin - Global CRM*/ 
RecordTypeId = '0120J000000cmlW' &amp;&amp;/*case record type'CRM Requests'*/ 
(PRIORVALUE(OwnerId) = $User.Id || Text (Status) = 'Solved &amp; Closed' || Text (Status) = 'Cancelled &amp; Closed' ) &amp;&amp;
(related_Country__c = null || text(Teamforce_Product__c)='')</errorConditionFormula>
    <errorMessage>Please check that "related country" and "Teamforce Product" are populated</errorMessage>
  </validationRules>
</CustomObject>